# Compression_Challenge

./: CMakeLists.txt  README.md  bitstream.cpp  bitstream.hpp  huffman.cpp  huffman.hpp  main.cpp
tests/: huffman.cpp  ibitstream.cpp  obitstream.cpp
